Added batch determination logic